# src/logs/logs.controller.ts
@@ -24,6 +24,22 @@ export class LogsController {
     async getErrorLogs(@Param('lines') lines: number) {
         return await safeRun(this.readLastLines('src/logs/app-err.log', lines));
     }
+
+    @JwtAuth()
+    @Get('test-error-logs/:lines')
+    @ApiParam({
+        name: 'lines',
+        type: Number,
+        description: 'Number of error log lines to retrieve',
+    })
+    @ApiResponse({
+        status: 200,
+        type: LogResponseDto,
+    })
+    async testErrorLogs(@Param('lines') lines: number) {
+        return await safeRun(this.readLastLines('src/logs/app-err.log', lines));
+    }
+
     @JwtAuth()
     @Get('output/:lines')
     @ApiParam({
